FRONTEND APP BUILD USING REACT
